force-app/main/default/objects/COMM_FreeVoucher__c/COMM_FreeVoucher__c.object-meta.xml
<CustomObject>
    <description>Object that represents a record of a free voucher to be given to customers</description>
    <label>Free Voucher</label>
    <nameField>
        <displayFormat>FV-{0000}</displayFormat>
        <label>Free Voucher Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Free Vouchers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>