force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_Airport__c.field-meta.xml
<CustomField>
    <fullName>COMM_Airport__c</fullName>
    <description>Airport the Voucher is associated with</description>
    <formula>IF(TEXT($User.LanguageLocaleKey) = &apos;pt_PT&apos;,
   CASE(COMM_Product__r.COMM_Airport__c,
      &quot;OPO&quot;, &quot;Porto&quot;,
      &quot;LIS&quot;,&quot;Lisboa&quot;,
      &quot;FAO&quot;,&quot;Faro&quot;,
      &quot;FNC&quot;,&quot;Madeira&quot;,
      &quot;PDL&quot;,&quot;Ponta Delgada&quot;,
      TEXT(COMM_Product__r.COMM_Airport__c)),
IF(TEXT($User.LanguageLocaleKey) = &apos;es&apos;,
   CASE(COMM_Product__r.COMM_Airport__c,
      &quot;OPO&quot;, &quot;OPorto&quot;,
      &quot;LIS&quot;,&quot;Lisboa&quot;,
      &quot;FAO&quot;,&quot;Faro&quot;,
      &quot;FNC&quot;,&quot;Madeira&quot;,
      &quot;PDL&quot;,&quot;Ponta Delgada&quot;,
      TEXT(COMM_Product__r.COMM_Airport__c)),
CASE(COMM_Product__r.COMM_Airport__c,
   &quot;OPO&quot;, &quot;Porto&quot;,
   &quot;LIS&quot;,&quot;Lisbon&quot;,
   &quot;FAO&quot;,&quot;Faro&quot;,
   &quot;FNC&quot;,&quot;Madeira&quot;,
   &quot;PDL&quot;,&quot;Ponta Delgada&quot;,
   TEXT(COMM_Product__r.COMM_Airport__c))))</formula>
    <label>Airport</label>
    <type>Text</type>
</CustomField>