force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_Email__c.field-meta.xml
<CustomField>
    <fullName>COMM_Email__c</fullName>
    <description>Customer&apos;s Email address where the voucher is sent</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>