force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_Language__c.field-meta.xml
<CustomField>
    <fullName>COMM_Language__c</fullName>
    <description>Language used in emails that are sent to the Customer</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_Codes</valueSetName>
    </valueSet>
</CustomField>