force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_QRCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_QRCode__c</fullName>
    <description>The text value of the QR Code of the Voucher</description>
    <label>QR Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>