force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_QRCodeImage__c.field-meta.xml
<CustomField>
    <fullName>COMM_QRCodeImage__c</fullName>
    <description>Field to store QR Code Image of the Voucher</description>
    <label>QR Code Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>