force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_ReservationName__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReservationName__c</fullName>
    <description>Name of the Customer on the Reservation the Voucher is associated with</description>
    <label>Reservation Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>