force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_SentCounter__c.field-meta.xml
<CustomField>
    <fullName>COMM_SentCounter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times the Voucher was sent</description>
    <label>Sent Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>