force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_StartDate__c</fullName>
    <description>Date of when Voucher can be used</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>