force-app/main/default/objects/COMM_FreeVoucher__c/fields/COMM_Status__c.field-meta.xml
<CustomField>
    <fullName>COMM_Status__c</fullName>
    <description>Status of the Voucher</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Resent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>