force-app/main/default/objects/COMM_FreeVoucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COMM_ReservationName__c</columns>
    <columns>COMM_Product__c</columns>
    <columns>COMM_Airport__c</columns>
    <columns>COMM_Status__c</columns>
    <columns>COMM_StartDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>